--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -953,7 +953,7 @@ that beset certain families because of their guilt for ancient crimes:
 it turns up among those who need a way out; it gives prophecies and
 takes refuge in prayers to the gods and in worship, discovering
 mystic rites and purifications that bring the man it
-touches\high{\goto{22}[phaedrus.htmlux5cux23phaedrfn_22]} through to
+touches through to
 safety for this and all time to come. So it is that the right sort of
 madness finds relief from present hardships for a man it has possessed.
 
@@ -981,7 +981,7 @@ convinces the wise if not the clever.
 divine or human, by examining what it does and what is done to it. Here
 begins the proof:
 
-“Every soul\high{\goto{23}[phaedrus.htmlux5cux23phaedrfn_23]} is
+“Every soul\endnote{Alternatively, “All soul.”} is
 immortal. That is because whatever is always in motion is immortal,
 while what moves, and is moved by, something else stops living when it
 stops moving. So it is only what moves itself that never desists from
@@ -997,7 +997,7 @@ nothing else could get started from it---that is, if everything gets
 started from a source. This then is why a self-mover is a source of
 motion. And {\em that} is incapable of being destroyed or
 starting up; otherwise all heaven and everything that has been started
-up\high{\goto{24}[phaedrus.htmlux5cux23phaedrfn_24]} would collapse,
+up would collapse,
 come to a stop, and never have cause to start moving again. But since we
 have found that a self-mover is immortal, we should have no qualms about
 declaring that this is the very essence and principle of a soul, for
@@ -1117,7 +1117,7 @@ is weighed down, sheds its wings and falls to earth. At that
 point, according to the law, the soul is not born into a wild animal in
 its first incarnation; but a soul that has seen the most will be planted
 in the seed of a man who will become a lover of
-wisdom\high{\goto{25}[phaedrus.htmlux5cux23phaedrfn_25]} or of beauty,
+wisdom\endnote{I.e., a philosopher.} or of beauty,
 or who will be cultivated in the arts and prone to erotic love. The
 second sort of soul will be put into someone who will be a lawful king
 or warlike commander; the third, a statesman, a manager of a household,
@@ -1148,7 +1148,7 @@ was once human can move from an animal to a human being again. But a
 soul that never saw the truth cannot take a human shape, since a human
 being must understand speech in terms of general forms, proceeding to 
 bring many perceptions together into a reasoned
-unity.\high{\goto{26}[phaedrus.htmlux5cux23phaedrfn_26]} That process is
+unity. That process is
 the recollection of the things our soul saw when it was traveling with
 god, when it disregarded the things we now call real and lifted up its
 head to what is truly real instead.
@@ -1187,7 +1187,7 @@ here, and neither do the other objects of the soul's admiration; the
 senses are so murky that only a few people are able to make out, with
 difficulty, the original of the likenesses they encounter here. But
 beauty was radiant to see at that time when the souls, along with the
-glorious chorus (we\high{\goto{27}[phaedrus.htmlux5cux23phaedrfn_27]}
+glorious chorus (we\endnote{I.e., we philosophers.}
 were with Zeus, while others followed other gods), saw that blessed and
 spectacular vision and were ushered into the mystery that we may rightly 
 call the most blessed of all. And we who celebrated it were
@@ -1233,7 +1233,9 @@ feels when it begins to grow wings. It swells up and aches and tingles
 as it grows them. But when it looks upon the beauty of the boy and takes
 in the stream of particles flowing into it from his beauty (that is why
 this is called
-‘desire'\high{\goto{28}[phaedrus.htmlux5cux23phaedrfn_28]}), when it is
+‘desire'\endnote{“Desire” is {\em himeros}:
+the derivation is from {\em merē} (“particles”), {\em ienai} (“go”) and
+{\em rhein} (“flow”).}), when it is
 watered and warmed by this, then all its pain subsides and is replaced
 by joy. When, however, it is separated from the boy and runs
 dry, then the openings of the passages in which the feathers grow are
@@ -1262,7 +1264,7 @@ terrible pain.
 
 “This is the experience we humans call love, you beautiful boy (I mean
 the one to whom I am making this
-speech).\high{\goto{29}[phaedrus.htmlux5cux23phaedrfn_29]} You are so
+speech). You are so
 young that what the gods call it is likely to strike you as funny. Some
 of the successors of Homer, I believe, report two lines from the less
 well known poems, of which the second is quite indecent and does not
@@ -1273,7 +1275,9 @@ scan very well. They praise love this way:\crlf
 
 {\em But because of his need to thrust out the wings,} {\em the gods
 call him
-‘Shove.'}\high{\goto{30}[phaedrus.htmlux5cux23phaedrfn_30]}\crlf
+‘Shove.'}\endnote{The lines are probably
+Plato's invention, as the language is not consistently Homeric. The pun
+in the original is on {\em erōs} and {\em pterōs} (“the winged one”).}\crlf
 \crlf
 
 You may believe this or not as you like. But, seriously, the cause of
@@ -1307,7 +1311,9 @@ touch with the god by memory they are inspired by him and adopt his
 customs and practices, so far as a human being can share a god's life.
 For all of this they know they have the boy to thank, and so they love
 him all the more; and if they draw their inspiration from Zeus, then,
-like the Bacchants,\high{\goto{31}[phaedrus.htmlux5cux23phaedrfn_31]}
+like the Bacchants,\endnote{Bacchants were worshippers
+of Dionysus who gained miraculous abilities when possessed by the
+madness of their god.}
 they pour it into the soul of the one they love in order to help
 him take on as much of their own god's qualities as possible. Hera's
 followers look for a kingly character, and once they have found him they
@@ -1321,7 +1327,7 @@ make every possible effort to draw him into being totally like
 themselves and the god to whom they are devoted. This, then, is any true
 lover's heart's desire: if he follows that desire in the manner I
 described, this friend who has been driven mad by love will secure a
-consummation\high{\goto{32}[phaedrus.htmlux5cux23phaedrfn_32]} for the
+consummation for the
 one he has befriended that is as beautiful and blissful as I said---if,
 of course, he captures him. Here, then, is how the captive is caught:
 
@@ -1376,7 +1382,7 @@ would from a starting gate; and he violently yanks the bit back out of
 the teeth of the insolent horse, only harder this time, so that he
 bloodies its foul-speaking tongue and jaws, sets its legs and haunches
 firmly on the ground, and ‘gives it over to
-pain.'\high{\goto{33}[phaedrus.htmlux5cux23phaedrfn_33]} When the bad
+pain.' When the bad
 horse has suffered this same thing time after time, it stops being so
 insolent; now it is humble enough to follow the charioteer's warnings,
 and when it sees the beautiful boy it dies of fright, with the result
@@ -1465,10 +1471,10 @@ soul around for nine thousand years on the earth and
 leads it, mindless, beneath it.
 
 “So now, dear Love, this is the best and most beautiful
-palinode\high{\goto{34}[phaedrus.htmlux5cux23phaedrfn_34]} we could
+palinode we could
 offer as payment for our debt, especially in view of the rather poetical
 choice of words Phaedrus made me
-use.\high{\goto{35}[phaedrus.htmlux5cux23phaedrfn_35]} Forgive us our
+use. Forgive us our
 earlier speeches in return for this one; be kind and gracious toward my
 expertise at love, which is your own gift to me: do not, out of anger,
 take it away or disable it; and grant that I may be held in higher
@@ -1501,7 +1507,9 @@ afraid that in later times they may come to be known as “sophists.”
 
 \saysocrates Phaedrus, you don't understand the expression “Pleasant 
 Bend”---it originally referred to the long bend of the
-Nile.\high{\goto{36}[phaedrus.htmlux5cux23phaedrfn_36]} And, besides the
+Nile.\endnote{Apparently this was a
+familiar example of something named by language that means the
+opposite---though called “pleasant” it was really a long, nasty bend.} And, besides the
 bend, you also don't understand that the most ambitious politicians love
 speechwriting and long for their writings to survive. In fact, when they
 write one of their speeches, they are so pleased when people praise it
@@ -1511,7 +1519,7 @@ that they add at the beginning a list of its admirers everywhere.
 
 \saysocrates Don't you know that the first thing
 politicians put in their
-writings\high{\goto{37}[phaedrus.htmlux5cux23phaedrfn_37]} is the names
+writings is the names
 of their admirers?
 
 \sayphaedrus How so?
