--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -1526,7 +1526,10 @@ of their admirers?
 
 \saysocrates “Resolved,” the author often begins, “by the Council” or “by
 the People” or by both, and “So-and-so
-said”\high{\goto{38}[phaedrus.htmlux5cux23phaedrfn_38]}---meaning
+said”\endnote{This is the standard form
+for decisions, including legislation, made by the assembly of Athens,
+though it is not the standard beginning for even the most political of
+speeches.}---meaning
 himself, the writer, with great solemnity and self-importance. Only then
 does he go on with what he has to say, showing off his wisdom to his
 admirers, often composing a very long document. Do you think there's any
@@ -1548,7 +1551,11 @@ the contrary, they are in awe of it.
 
 \saysocrates There's this too. What of an orator or a king who acquires 
 enough power to match Lycurgus, Solon, or Darius as a
-lawgiver\high{\goto{39}[phaedrus.htmlux5cux23phaedrfn_39]} and acquires
+lawgiver\endnote{Lycurgus was the legendary
+lawgiver of Sparta. Solon reformed the constitution of Athens in the
+early sixth century B.C. and was revered by both democrats and their
+opponents. Darius was king of Persia (521--486 B.C.). None of these was
+famous as a speech writer.} and acquires
 immortal fame as a speech writer in his city? Doesn't he think that he
 is equal to the gods while he is still alive? And don't those who live
 in later times believe just the same about him when they behold his
