--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -1645,7 +1645,7 @@ will act as judges. Nor again what is really good or noble, but only
 what will seem so. For that is what persuasion proceeds from, not truth.
 
 \saysocrates Anything that wise men say, Phaedrus, “is not lightly to be
-cast aside”;\high{\goto{40}[phaedrus.htmlux5cux23phaedrfn_40]} we must
+cast aside”;\endnote{{\em Iliad} ii.361} we must
 consider whether it might be right. And what you just said, in
 particular, must not be dismissed.
 
@@ -1699,7 +1699,8 @@ conviction on the basis of a systematic art without me.”
 rhetoric testify that it is an art. For it seems to me as if I hear
 certain arguments approaching and protesting that that is a lie and that
 rhetoric is not an art but an artless
-practice.\high{\goto{41}[phaedrus.htmlux5cux23phaedrfn_41]} As the
+practice.\endnote{For a criticism of
+rhetoric as not an art, see {\em Gorgias} 462b--c.} As the
 Spartan said, there is no genuine art of speaking without a grasp of
 truth, and there never will be.
 
@@ -1709,7 +1710,8 @@ make it?
 
 \saysocrates Come to us, then, noble creatures; convince Phaedrus, him of
 the beautiful
-offspring,\high{\goto{42}[phaedrus.htmlux5cux23phaedrfn_42]} that unless
+offspring,\endnote{Cf. 242a--b;
+{\em Symposium} 209b--e.} that unless
 he pursues philosophy properly he will never be able to make a proper
 speech on any subject either. And let Phaedrus be the one to answer.
 
@@ -1730,11 +1732,18 @@ That's all I've heard.
 \saysocrates Well, have you only heard of the rhetorical treatises of
 Nestor and Odysseus---those they wrote in their spare time in Troy?
 Haven't you also heard of the works of
-Palamedes?\high{\goto{43}[phaedrus.htmlux5cux23phaedrfn_43]}
+Palamedes?\endnote{Nestor and Odysseus are
+Homeric heroes known for their speaking ability. Palamedes, who does not
+figure in Homer, was proverbial for his cunning.}
 
 \sayphaedrus No, by Zeus, I haven't even heard of Nestor's---unless
 by Nestor you mean Gorgias, and by Odysseus, Thrasymachus or
-Theodorus.\high{\goto{44}[phaedrus.htmlux5cux23phaedrfn_44]}
+Theodorus.\endnote{Gorgias of Leontini was
+the most famous teacher of rhetoric to visit Athens. About Thrasymachus
+of Chalcedon (cf. 267c) we know little beyond what we can infer from his
+appearance in Book 1 of the {\em Republic}. On Theodorus of Byzantium
+(not to be confused with the geometer who appears in the
+{\em Theaetetus}) see 266e and Aristotle {\em Rhetoric} 3.13.5.}
 
 \saysocrates Perhaps. But let's leave these people aside. Answer this
 question yourself: What do adversaries do in the lawcourts? Don't they
@@ -1761,7 +1770,9 @@ same policy---as just the opposite at another.
 \saysocrates Now, don't we know that the Eleatic Palamedes is such an
 artful speaker that his listeners will perceive the same things to be
 both similar and dissimilar, both one and many, both at rest and also in
-motion?\high{\goto{45}[phaedrus.htmlux5cux23phaedrfn_45]}
+motion?\endnote{The Eleatic Palamedes is
+presumably Zeno of Elea, the author of the famous paradoxes about
+motion.}
 
 \sayphaedrus Most certainly.
 
@@ -2053,9 +2064,9 @@ before us, and praised it as the cause of our greatest goods.
 collections, so that I may be able to think and to speak; and if I
 believe that someone else is capable of discerning a single thing that
 is also by nature capable of encompassing
-many,\high{\goto{46}[phaedrus.htmlux5cux23phaedrfn_46]} I follow
+many, I follow
 “straight behind, in his tracks, as if he were a
-god.”\high{\goto{47}[phaedrus.htmlux5cux23phaedrfn_47]} God knows
+god.”\endnote{{\em Odyssey} ii.406.} God knows
 whether this is the right name for those who can do this correctly or
 not, but so far I have always called them “dialecticians.” But
 tell me what I must call them now that we have learned all this from
@@ -2088,17 +2099,21 @@ Witnesses concerning it; third, Indirect Evidence; fourth, Claims to
 Plausibility. And I believe at least that excellent Byzantine
 word-wizard adds Confirmation and Supplementary Confirmation.
 
-\sayphaedrus You mean the worthy
-Theodorus?\high{\goto{48}[phaedrus.htmlux5cux23phaedrfn_48]}
+\sayphaedrus You mean the worthy Theodorus?
 
 \saysocrates Quite. And he also adds Refutation and Supplementary
 Refutation, to be used both in prosecution and in
 defense. Nor must we forget the most excellent Evenus of
-Paros,\high{\goto{49}[phaedrus.htmlux5cux23phaedrfn_49]} who was the
+Paros,\endnote{Evenus of Paros was active
+as a sophist toward the end of the fifth century B.C. Only a few tiny
+fragments of his work survive.} who was the
 first to discover Covert Implication and Indirect Praise and who---some
 say---has even arranged Indirect Censures in verse as an aid to memory:
 a wise man indeed! And
-Tisias\high{\goto{50}[phaedrus.htmlux5cux23phaedrfn_50]} and Gorgias?
+Tisias\endnote{Tisias of Syracuse, with
+Corax, is credited with the founding of the Sicilian school of rhetoric,
+represented by Gorgias and Polus.} 
+and Gorgias?
 How can we leave them out when it is they who realized that what is
 likely must be held in higher honor than what is true; they who, by the
 power of their language, make small things appear great and great things
