--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -2120,7 +2120,9 @@ power of their language, make small things appear great and great things
 small; they who express modern ideas in ancient garb, and
 ancient ones in modern dress; they who have discovered how to argue both
 concisely and at infinite length about any subject? Actually, when I
-told Prodicus\high{\goto{51}[phaedrus.htmlux5cux23phaedrfn_51]} this
+told Prodicus\endnote{Prodicus of Ceos, who
+lived from about 470 till after 400 B.C., is frequently mentioned by
+Plato in connection with his ability to make fine verbal distinctions.} this
 last, he laughed and said that only he had discovered the art of proper
 speeches: What we need are speeches that are neither long nor short but
 of the right length.
@@ -2128,25 +2130,38 @@ of the right length.
 \sayphaedrus Brilliantly done, Prodicus!
 
 \saysocrates And what about
-Hippias?\high{\goto{52}[phaedrus.htmlux5cux23phaedrfn_52]} How can we
+Hippias?\endnote{Hippias of Elis was born
+in the mid-fifth century and traveled widely teaching a variety of
+subjects, including mathematics, astronomy, harmony, mnemonics, ethics,
+and history as well as public speaking.} How can we
 omit him? I am sure our friend from Elis would cast his vote with
 Prodicus.
 
 \sayphaedrus Certainly.
 
 \saysocrates And what shall we say of the whole gallery of terms
-Polus\high{\goto{53}[phaedrus.htmlux5cux23phaedrfn_53]} set
+Polus\endnote{Polus was a pupil of
+Gorgias; Plato represents him in the {\em Gorgias}, esp. at 448c and
+471a--c. He was said to have composed an {\em Art of Rhetoric}
+({\em Gorgias}, 462b).} set
 up---speaking with Reduplication, Speaking in Maxims, Speaking in
 Images---and of the terms Licymnius gave him as a present to help him
-explain Good Diction?\high{\goto{54}[phaedrus.htmlux5cux23phaedrfn_54]}
+explain Good Diction?\endnote{Licymnius of Chios was a
+dithyrambic poet and teacher of rhetoric.}
 
 \sayphaedrus But didn't Protagoras actually use similar
-terms?\high{\goto{55}[phaedrus.htmlux5cux23phaedrfn_55]}
+terms?\endnote{Protagoras of Abdera,
+whose life spanned most of the fifth century B.C., was the most famous
+of the early sophists. We have a vivid portrayal of him in Plato's
+{\em Protagoras} and an intriguing reconstruction of his epistemology in
+the {\em Theaetetus}.}
 
 \saysocrates Yes, Correct Diction, my boy, and other wonderful things. As
 to the art of making speeches bewailing the evils of poverty and old
 age, the prize, in my judgment, goes to the mighty
-Chalcedonian.\high{\goto{56}[phaedrus.htmlux5cux23phaedrfn_56]} He it is
+Chalcedonian.\endnote{Literally, “the might of
+the Chalcedonian”: a Homeric figure referring to Thrasymachus, who came
+from Chalcedon. Cf. 261c.} He it is
 also who knows best how to inflame a crowd and, once they are
 inflamed, how to hush them again with his words' magic spell, as he says
 himself. And let's not forget that he is as good at producing slander as
@@ -2225,7 +2240,12 @@ preliminaries of medicine, but not medicine itself.
 \sayphaedrus Absolutely.
 
 \saysocrates And what if the “honey-tongued Adrastus” (or perhaps
-Pericles)\high{\goto{57}[phaedrus.htmlux5cux23phaedrfn_57]} were to hear
+Pericles)\endnote{Pericles, who dominated
+Athens from the 450s until his death in 429 B.C., was famous as the most
+successful orator-politician of his time. The quotation is from the
+early Spartan poet Tyrtaeus, fragment 12.8 (Edmonds). Adrastus is a
+legendary warrior hero of Argos, one of the main characters in
+Euripides' {\em Suppliants}.} were to hear
 of all the marvelous techniques we just discussed---Speaking Concisely
 and Speaking in Images and all the rest we listed and proposed
 to examine under the light? Would he be angry or rude, as you and I
@@ -2269,7 +2289,7 @@ their lofty point of view and universal applicability. That's just what
 Pericles mastered---besides having natural ability. He came across
 Anaxagoras, who was just that sort of man, got his full dose of ethereal
 speculation, and understood the nature of mind and
-mindlessness\high{\goto{58}[phaedrus.htmlux5cux23phaedrfn_58]}---just
+mindlessness---just
 the subject on which Anaxagoras had the most to say. From this, I think,
 he drew for the art of rhetoric what was useful to it.
 
@@ -2295,7 +2315,12 @@ understanding of the nature of the soul without understanding
 the nature of the world as a whole?
 
 \sayphaedrus Well, if we're to listen to Hippocrates, Asclepius'
-descendant,\high{\goto{59}[phaedrus.htmlux5cux23phaedrfn_59]} we won't
+descendant,\endnote{Hippocrates, a
+contemporary of Socrates, is the famous doctor whose name is given to
+the Hippocratic Oath. None of the written works that have come down to
+us under his name express the view attributed to him in what follows.
+All doctors were said to be descendants of Asclepius, hero and god of
+healing.} we won't
 even understand the body if we don't follow that method.
 
 \saysocrates He speaks well, my friend. Still, Hippocrates aside, we must
@@ -2433,7 +2458,7 @@ wolf's side of the story as well.
 \saysocrates Well, these people say that there is no need to be so solemn
 about all this and stretch it out to such lengths. For the fact is, as
 we said ourselves at the beginning of this
-discussion,\high{\goto{60}[phaedrus.htmlux5cux23phaedrfn_60]} that one
+discussion, that one
 who intends to be an able rhetorician has no need to know the truth
 about the things that are just or good or yet about the people who are
 such either by nature or upbringing. No one in a lawcourt, you see,
