--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -2559,19 +2559,29 @@ ourselves, would we still care about the speculations of other people?
 heard.
 
 \saysocrates Well, this is what I've heard. Among the ancient gods of
-Naucratis\high{\goto{63}[phaedrus.htmlux5cux23phaedrfn_63]} in Egypt
+Naucratis\endnote{Naucratis was a Greek
+trading colony in Egypt. The story that follows is probably an invention
+of Plato's (see 275b3) in which he reworks elements from Egyptian and
+Greek mythology.} in Egypt
 there was one to whom the bird called the ibis is sacred. The name of
 that divinity was
-Theuth,\high{\goto{64}[phaedrus.htmlux5cux23phaedrfn_64]} and it was he
+Theuth,\endnote{Theuth (or Thoth) is the
+Egyptian god of writing, measuring, and calculation. The Greeks
+identified Thoth with Hermes, perhaps because of his role in weighing
+the soul. Thoth figures in a related story about the alphabet at
+{\em Philebus} 18b.} and it was he
 who first discovered number and calculation, geometry and astronomy, as
 well as the games of checkers and dice, and, above all else,
 writing.
 
 Now the king of all Egypt at that time was
-Thamus,\high{\goto{65}[phaedrus.htmlux5cux23phaedrfn_65]} who lived in
+Thamus,\endnote{As king of the Egyptian
+gods, Ammon (Thamus) was identified by Egyptians with the sun god Ra and
+by the Greeks with Zeus.} who lived in
 the great city in the upper region that the Greeks call Egyptian Thebes;
 Thamus they call
-Ammon.\high{\goto{66}[phaedrus.htmlux5cux23phaedrfn_66]} Theuth came to
+Ammon.\endnote{Accepting the emendation
+of {\em Thamoun} at d4.} Theuth came to
 exhibit his arts to him and urged him to disseminate them to all the
 Egyptians. Thamus asked him about the usefulness of each art, and while
 Theuth was explaining it, Thamus praised him for whatever he
@@ -2658,7 +2668,9 @@ who cared about his seeds and wanted them to yield fruit, plant
 them in all seriousness in the gardens of Adonis in the middle of the
 summer and enjoy watching them bear fruit within seven days? Or would he
 do this as an amusement and in honor of the holiday, if he did it at
-all?\high{\goto{67}[phaedrus.htmlux5cux23phaedrfn_67]} Wouldn't he use
+all?\endnote{Gardens of Adonis were
+pots or window boxes used for forcing plants during the festival of
+Adonis.} Wouldn't he use
 his knowledge of farming to plant the seeds he cared for when it was
 appropriate and be content if they bore fruit seven months later?
 
@@ -2799,7 +2811,9 @@ forget your own friend.
 \saysocrates Whom do you mean?
 
 \sayphaedrus The beautiful
-Isocrates.\high{\goto{68}[phaedrus.htmlux5cux23phaedrfn_68]} What are
+Isocrates.\endnote{Isocrates (436--338 B.C.)
+was an Athenian teacher and orator whose school was more famous in its
+day than Plato's Academy.} What are
 you going to tell him, Socrates? What shall we say he is?
 
 \saysocrates Isocrates is still young, Phaedrus. But I want to tell you
