--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -75,11 +75,11 @@ working to attain it.}
 {\em J.M.C.}\par
 \blank[line]
 
-\saysocrates Phaedrus, my friend! Where have you been? And where are you 
+\saysocrates Phaedrus, my friend! Where have you been? And where are\inouter{227} you 
 going?
 
 \sayphaedrus I was with Lysias, the son of Cephalus,\endnote{Cephalus is prominent in the opening section of Plato\symbol[rightquote]s {\em Republic}, which is set in his home in Piraeus, the port of Athens. His sons Lysias, Polemarchus, and Euthydemus were known for their democratic sympathies.} Socrates, and I am going for a walk outside the city walls because I was with him for a long time, sitting there the whole morning. You see, I'm keeping in
-mind the advice of our mutual friend Acumenus,\endnote{Acumenus was a doctor and a relative of the doctor Eryximachus who speaks in the {\em Symposium.}} who says it's more refreshing to walk along country roads than city streets.
+mind the advice of our mutual friend Acumenus,\endnote{Acumenus was a doctor and a relative of the doctor Eryximachus who speaks in the {\em Symposium.}} who \inouter{b} says it's more refreshing to walk along country roads than city streets.
 
 \saysocrates He is quite right, too, my friend. So Lysias, I take it, is in
 the city?
@@ -102,7 +102,7 @@ adapted by Plato.}
 
 \sayphaedrus Lead the way, then.
 
-\saysocrates If only you will tell me.
+\saysocrates If only you will tell me.\inouter{c}
 
 \sayphaedrus In fact, Socrates, you're just the right person to hear the
 speech that occupied us, since, in a roundabout way, it was about love.
@@ -112,7 +112,7 @@ Lysias argues that it is better to give your favors to someone who does
 not love you than to someone who does.
 
 \saysocrates What a wonderful man! I wish he would write that you should 
-give your favors to a poor rather than to a rich man, to an
+give your favors to a poor rather\inouter{d} than to a rich man, to an
 older rather than to a younger one---that is, to someone like me and
 most other people: then his speeches would be really sophisticated, and
 they'd contribute to the public good besides! In any case, I am so eager
@@ -122,7 +122,7 @@ again.\endnote{Herodicus was a medical expert whose regimen Socrates
 criticizes in {\em Republic}.}
 
 \sayphaedrus What on earth do you mean, Socrates? Do you think that a 
-mere dilettante like me could recite from memory in a
+mere dilettante like me could recite from memory\inouter{228} in a
 manner worthy of him a speech that Lysias, the best of our writers, took
 such time and trouble to compose? Far from it---though actually I would
 rather be able to do that than come into a large fortune!
@@ -131,14 +131,14 @@ rather be able to do that than come into a large fortune!
 who I am myself---and neither is the case. I know very well that he did
 not hear Lysias' speech only once: he asked him to repeat it over and
 over again, and Lysias was eager to oblige. But not even that was enough
-for him. In the end, he took the book himself and pored over the
+for him. In the end, he took the book himself\inouter{b} and pored over the
 parts he liked best. He sat reading all morning long, and when he got
 tired, he went for a walk, having learned---I am quite sure---the whole
 speech by heart, unless it was extraordinarily long. So he started for
 the country, where he could practice reciting it. And running into a man
 who is sick with passion for hearing speeches, seeing him---just seeing
 him---he was filled with delight: he had found a partner for his
-frenzied dance, and he urged him to lead the way. But when that
+frenzied dance, and he urged him to lead the way.\inouter{c} But when that
 lover of speeches asked him to recite it, he played coy and pretended
 that he did not want to. In the end, of course, he was going to recite
 it even if he had to force an unwilling audience to listen. So, please,
@@ -149,7 +149,7 @@ obviously not leave me in peace until I do so one way or another.
 
 \saysocrates You are absolutely right.
 
-\sayphaedrus That's what I'll do, then. But, Socrates, it really is true
+\sayphaedrus That's what I'll do, then.\inouter{d} But, Socrates, it really is true
 that I did not memorize the speech word for word; instead, I
 will give a careful summary of its general sense, listing all the ways
 he said the lover differs from the non-lover, in the proper order.
@@ -157,14 +157,14 @@ he said the lover differs from the non-lover, in the proper order.
 \saysocrates Only if you first show me what you are holding in your left
 hand under your cloak, my friend. I strongly suspect you have the speech
 itself. And if I'm right, you can be sure that, though I love you
-dearly, I'll never, as long as Lysias himself is present, allow you to
+dearly, I'll never, as long as Lysias himself\inouter{e} is present, allow you to
 practice your own speechmaking on me. Come on, then, show me.
 
 \sayphaedrus Enough, enough. You've dashed my hopes of using you as my
 training partner, Socrates. All right, where do you want to sit while we
 read?
 
-\saysocrates Let's leave the path here and walk along the Ilisus; then we 
+\saysocrates Let's leave the path\inouter{229} here and walk along the Ilisus; then we 
 can sit quietly wherever we find the right spot.
 
 \sayphaedrus How lucky, then, that I am barefoot today---you, of course,
@@ -178,7 +178,7 @@ especially at this hour and season.
 
 \saysocrates Of course.
 
-\sayphaedrus It's shady, with a light breeze; we can sit or, if we prefer,
+\sayphaedrus It's shady,\inouter{b} with a light breeze; we can sit or, if we prefer,
 lie down on the grass there.
 
 \saysocrates Lead on, then.
@@ -195,7 +195,7 @@ River. Boreas personifies the north wind.}
 \sayphaedrus Couldn't this be the very spot? The stream is lovely, pure and
 clear: just right for girls to be playing nearby.
 
-\saysocrates No, it is two or three hundred yards farther downstream, 
+\saysocrates No, it is two\inouter{c} or three hundred yards farther downstream, 
 where one crosses to get to the district of Agra. I think there
 is even an altar to Boreas there.
 
@@ -206,20 +206,20 @@ Zeus, do you really believe that that legend is true?
 our intellectuals do. I could then tell a clever story: I could claim
 that a gust of the North Wind blew her over the rocks where she was
 playing with Pharmaceia; and once she was killed that way people said
-she had been carried off by Boreas---or was it, perhaps, from the
+she had been carried off by Boreas---or was it,\inouter{d} perhaps, from the
 Areopagus? The story is also told that she was carried away from
 there instead. Now, Phaedrus, such explanations are amusing enough, but
 they are a job for a man I cannot envy at all. He'd have to be far too
 ingenious and work too hard---mainly because after that he will have to
 go on and give a rational account of the form of the Hippocentaurs, and
-then of the Chimera; and a whole flood of Gorgons and Pegasuses
+then of the Chimera; and a whole flood of Gorgons and Pegasuses\inouter{e}
 and other monsters, in large numbers and absurd forms, will overwhelm
 him. Anyone who does not believe in them, who wants to explain them away
 and make them plausible by means of some sort of rough ingenuity, will
 need a great deal of time.
 
 But I have no time for such things; and the reason, my friend, is this.
-I am still unable, as the Delphic inscription orders, to
+I am still unable, as the Delphic inscription\inouter{230} orders, to
 know myself; and it really seems to me ridiculous to look into other
 things before I have understood that. This is why I do not concern
 myself with them. I accept what is generally believed, and, as I was
@@ -231,7 +231,7 @@ divine and gentle nature? But look, my
 friend---while we were talking, haven't we reached the tree you were
 taking us to?
 
-\sayphaedrus That's the one.
+\sayphaedrus That's the one.\inouter{b}
 
 \saysocrates By Hera, it really is a beautiful resting place. The plane
 tree is tall and very broad; the chaste-tree, high as it is, is
@@ -243,21 +243,21 @@ can judge from the statues and votive
 offerings.\endnote{Achelous is a river god. The
 Nymphs are benevolent female deities associated with natural phenomena
 such as streams, woods, and mountains.} Feel the
-freshness of the air; how pretty and pleasant it is; how it echoes with
+freshness of the air;\inouter{c} how pretty and pleasant it is; how it echoes with
 the summery, sweet song of the cicadas' chorus! The most exquisite thing
 of all, of course, is the grassy slope: it rises so gently that you can
 rest your head perfectly when you lie down on it. You've really been the
 most marvelous guide, my dear Phaedrus.
 
 \sayphaedrus And you, my remarkable friend, appear to be totally out of 
-place. Really, just as you say, you seem to need a guide, not to
+place. Really, just as you say, you seem\inouter{d} to need a guide, not to
 be one of the locals. Not only do you never travel abroad---as far as I
 can tell, you never even set foot beyond the city walls.
 
 \saysocrates Forgive me, my friend. I am devoted to learning; landscapes
 and trees have nothing to teach me---only the people in the city can do
 that. But you, I think, have found a potion to charm me into leaving.
-For just as people lead hungry animals forward by shaking
+For just as people lead hungry animals forward\inouter{e} by shaking
 branches of fruit before them, you can lead me all over Attica or
 anywhere else you like simply by waving in front of me the leaves of a
 book containing a speech. But now, having gotten as far as this place
@@ -267,7 +267,7 @@ think will be most comfortable for you, and read on.
 \sayphaedrus Listen, then:
 
 “You understand my situation: I've told you how good it would be for us,
-in my opinion, if this worked out. In any case, I don't think I should 
+in my opinion,\inouter{231} if this worked out. In any case, I don't think I should 
 lose the chance to get what I am asking for, merely
 because I don't happen to be in love with you.
 
@@ -278,7 +278,7 @@ forced but voluntary; and he does the best that he possibly can for you,
 just as he would for his own business.
 
 Besides, a lover keeps his eye on the balance sheet---where his
-interests have suffered from love, and where he has done well; and when
+interests have suffered from love, and where\inouter{b} he has done well; and when
 he adds up all the trouble he has taken, he thinks he's long since given
 the boy he loved a fair return. A non-lover, on the other hand,
 can't complain about love's making him neglect his own business; he
@@ -287,7 +287,7 @@ quarrels he's had with his relatives. Take away all those headaches and
 there's nothing left for him to do but put his heart into whatever he
 thinks will give pleasure.
 
-Besides, suppose a lover does deserve to be honored because, as they 
+Besides,\inouter{c} suppose a lover does deserve to be honored because, as they 
 say, he is the best friend his loved one will ever have, and he
 stands ready to please his boy with all those words and deeds that are
 so annoying to everyone else. It's easy to see (if he is telling the
@@ -296,7 +296,7 @@ love than for the old one, and it's clear he'll treat the old one
 shabbily whenever that will please the new one.
 
 And anyway, what sense does it make to throw away something like that
-on a person who has fallen into such a miserable condition that those 
+on a person who\inouter{d} has fallen into such a miserable condition that those 
 who have suffered it don't even try to defend themselves against
 it? A lover will admit that he's more sick than sound in the head. He's
 well aware that he is not thinking straight; but he'll say he can't get
@@ -307,7 +307,7 @@ Another point: if you were to choose the best of those who are in love
 with you, you'd have a pretty small group to pick from; but you'll have
 a large group if you don't care whether he loves you or not and just
 pick the one who suits you best; and in that larger pool you'll have a
-much better hope of finding someone who deserves your friendship.
+much better hope of finding someone who deserves your friendship.\inouter{e}
 
 Now suppose you're afraid of conventional standards and the stigma that
 will come to you if people find out about this. Well, it stands to
